# PICasso

./: .gitignore  CMakeLists.txt  Makefile  count.sh  gui.txt  linecount.sh
header/: Program.hpp  alu.hpp  compiler.hpp  filereader.hpp  instruction.hpp  instructionList.hpp  instructionset.hpp  logger.hpp  memoryInterface.hpp  pic.hpp  prescaler.hpp  program.hpp  ram.hpp  register.hpp  stack.hpp  terminal_ui.hpp  timer.hpp
header/gui/: TerminalGUI.hpp
header/instructionset/: addlw.hpp  addwf.hpp  andlw.hpp  andwf.hpp  arithmetic.hpp  bcf.hpp  bitwise.hpp  bsf.hpp  btfsc.hpp  btfss.hpp  call.hpp  clrf.hpp  clrw.hpp  clrwdt.hpp  comf.hpp  decf.hpp  decfsz.hpp  goto.hpp  incf.hpp  incfsz.hpp  iorlw.hpp  iorwf.hpp  jump.hpp  literal.hpp  movf.hpp  movlw.hpp  movwf.hpp  nop.hpp  ret.hpp  retfie.hpp  retlw.hpp  return.hpp  rlf.hpp  rrf.hpp  sleep.hpp  sublw.hpp  subwf.hpp  swapf.hpp  xorlw.hpp  xorwf.hpp
header/instructionset/arithmetic/: addwf.hpp  andwf.hpp  clrf.hpp  clrwdt.hpp  comf.hpp  decf.hpp  decfsz.hpp  incf.hpp  incfsz.hpp  iorwf.hpp  movf.hpp  movwf.hpp  rlf.hpp  rrf.hpp  subwf.hpp  swapf.hpp  xorwf.hpp
header/instructionset/bitwise/: bcf.hpp  bsf.hpp  btfsc.hpp  btfss.hpp
header/instructionset/jump/: call.hpp  goto.hpp
header/instructionset/literal/: addlw.hpp  andlw.hpp  clrw.hpp  iorlw.hpp  movlw.hpp  sublw.hpp  xorlw.hpp
header/instructionset/return/: retfie.hpp  retlw.hpp  return.hpp
header/memory/: bit.hpp  byte.hpp  nibble.hpp  register.hpp
header/tui/: lst_preview.hpp  tui_controller.hpp  tui_helper.hpp  tui_initializer.hpp  tui_layout.hpp  tui_renderer.hpp  tui_shareddata.hpp  tui_types.hpp
progs/: TPicSim1.json  TPicSim2.json  TPicSim3.json  TPicSim4.json  TPicSim5.json  TPicSim6.json
src/: alu.cpp  compiler.cpp  filereader.cpp  instruction.cpp  logger.cpp  main.cpp  memoryInterface.cpp  pic.cpp  prescaler.cpp  program.cpp  ram.cpp  register.cpp  stack.cpp  terminal_ui.cpp  timer.cpp
src/gui/: TerminalGUI.cpp
src/instructionset/: addlw.cpp  addwf.cpp  andlw.cpp  andwf.cpp  arithmetic.cpp  bcf.cpp  bitwise.cpp  bsf.cpp  btfsc.cpp  btfss.cpp  call.cpp  clrf.cpp  clrw.cpp  clrwdt.cpp  comf.cpp  decf.cpp  decfsz.cpp  goto.cpp  incf.cpp  incfsz.cpp  iorlw.cpp  iorwf.cpp  jump.cpp  literal.cpp  movf.cpp  movlw.cpp  movwf.cpp  nop.cpp  ret.cpp  retfie.cpp  retlw.cpp  return.cpp  rlf.cpp  rrf.cpp  sleep.cpp  sublw.cpp  subwf.cpp  swapf.cpp  xorlw.cpp  xorwf.cpp
src/instructionset/arithmetic/: addwf.cpp  andwf.cpp  clrf.cpp  clrwdt.cpp  comf.cpp  decf.cpp  decfsz.cpp  incf.cpp  incfsz.cpp  iorwf.cpp  movf.cpp  movwf.cpp  rlf.cpp  rrf.cpp  subwf.cpp  swapf.cpp  xorwf.cpp
src/instructionset/bitwise/: bcf.cpp  bsf.cpp  btfsc.cpp  btfss.cpp
src/instructionset/jump/: call.cpp  goto.cpp
src/instructionset/literal/: addlw.cpp  andlw.cpp  clrw.cpp  iorlw.cpp  movlw.cpp  sublw.cpp  xorlw.cpp
src/instructionset/return/: retfie.cpp  retlw.cpp  return.cpp
src/memory/: bit.cpp  byte.cpp  nibble.cpp  register.cpp
src/tui/: lst_preview.cpp  tui_controller.cpp  tui_helper.cpp  tui_initializer.cpp  tui_renderer.cpp
terminal/: terminal_ui.cpp
tests/: test_bit.cpp  test_byte.cpp  test_nibble.cpp  test_ram.cpp  test_validate.cpp
